--- a/package.xml
+++ b/package.xml
@@ -29,6 +29,8 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <!-- Use build_depend for packages you need at compile time: -->
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>mavros</build_depend>
   <build_depend>mavros_msgs</build_depend>
@@ -39,6 +41,8 @@
   <build_depend>tf</build_depend>
 
   <!-- Use run_depend for packages you need at runtime: -->
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>mavros</run_depend>
   <run_depend>mavros_msgs</run_depend>
