--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_service_files(
 add_action_files(#DIRECTORY action 
   FILES 
   Takeoff.action
+  GoToLocal.action
 )
 
 ## Generate added messages and services with any dependencies listed here
